--- a/pom.xml
+++ b/pom.xml
@@ -81,13 +81,10 @@
                 <jdkToolchain>
                   <version>9</version>
                 </jdkToolchain>
-                <includes>
-                  <include>**/gson/Gson.java</include>
-                  <include>**/gson/JsonObject.java</include>
-                  <include>**/gson/GsonBuilder.java</include>
-                  <include>**/gson/TypeAdapter.java</include>
+		<includes>
+                  <include>**/gson/*.java</include>
 		  <include>module-info.java</include>
-                </includes>
+	  </includes>
               </configuration>
             </execution>
             <execution>
