Annotations added to internal/

--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,10 @@
                   <version>9</version>
                 </jdkToolchain>
 		<includes>
-			<include>**/gson/*.java</include>
+			<include>**/gson/internal/*.java</include>
 			<include>**/gson/stream/*.java</include>
 			<include>**/gson/reflect/*.java</include>
+			<include>**/gson/*.java</include>
 		  <include>module-info.java</include>
 	  </includes>
               </configuration>
