--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -30,9 +30,10 @@
         <version>3.8.1</version>
         <configuration>
 		<includes>
-            <include>**/gson/*.java</include>
-	    <include>**/gson/reflect/*.java</include>
-	    <include>**/gson/stream/*.java</include>
+			<include>**/gson/internal/*.java</include>
+			<include>**/gson/stream/*.java</include>
+			<include>**/gson/reflect/*.java</include>
+			<include>**/gson/*.java</include>
 	    <include>module-info.java</include>
     </includes>
           <release>11</release>
