--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -30,7 +30,8 @@
         <version>3.8.1</version>
         <configuration>
 		<includes>
-            <include>**/gson/*.java</include>
+			<include>**/gson/reflect/*.java</include>
+			<include>**/gson/*.java</include>
 	    <include>module-info.java</include>
     </includes>
           <release>11</release>
@@ -46,7 +47,7 @@
             </path>
           </annotationProcessorPaths>
           <annotationProcessors>
-            <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+            <annotationProcessor>org.checkerframework.checker.index.IndexChecker</annotationProcessor>
           </annotationProcessors>
           <compilerArgs>
             <arg>-AprintErrorStack</arg>
