--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,8 @@
                   <version>9</version>
                 </jdkToolchain>
 		<includes>
-                  <include>**/gson/*.java</include>
+			<include>**/gson/reflect/*.java</include>
+			<include>**/gson/*.java</include>
 		  <include>module-info.java</include>
 	  </includes>
               </configuration>
@@ -110,7 +111,7 @@
               <Xmaxwarns>10000</Xmaxwarns>
             </compilerArguments>
             <annotationProcessors>
-              <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+              <annotationProcessor>org.checkerframework.checker.index.IndexChecker</annotationProcessor>
             </annotationProcessors>
             <compilerArgs>
               <!--<arg>-Xbootclasspath/p:$CHECKERFRAMEWORK/checker/dist/jdk8.jar</arg>-->
