--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,10 @@
                   <version>9</version>
                 </jdkToolchain>
 		<includes>
+			<include>**/gson/internal/bind/*.java</include>
 			<include>**/gson/internal/*.java</include>
+			<include>**/gson/reflect/*.java</include>
+			<include>**/gson/*.java</include>
 		  <include>module-info.java</include>
 	  </includes>
               </configuration>
