--- a/pom.xml
+++ b/pom.xml
@@ -80,14 +80,10 @@
               <configuration>
                 <jdkToolchain>
                   <version>9</version>
-                </jdkToolchain>
-		<includes>
-			<include>**/gson/internal/bind/*.java</include>
-			<include>**/gson/internal/*.java</include>
-			<include>**/gson/reflect/*.java</include>
-			<include>**/gson/*.java</include>
-		  <include>module-info.java</include>
-	  </includes>
+	  </jdkToolchain>
+	  <excludes>
+		  <exclude>**/JsonReader.java</exclude>
+	  </excludes>
               </configuration>
             </execution>
             <execution>
